feat(kanban): add avaje-jsonb, MapInput records, parameter-based DSL codegen, and auto-@Json model preprocessing
- Add Avaje Jsonb dependencies to dsl-api, dsl, dsl-codegen, starter, and dsl-examples.

- Convert MapInput to @Json-annotated record with fromMap()/asMap() helpers.

- SimpleContext.body() now pattern-switches on MapInput and returns a fresh mutable map copy.

- Add MapInput overloads to Process/Transaction/Function/Compensation contexts and rich implementations.

- Rewrite ModelSourcePreprocessor with JavaParser: inject @Json + import only when missing, skip interfaces/enums.

- DescriptorFactory maps parameter-based process/transaction input/output to MapInput.class.

- Special-case MapInput in MapInputConverter for TemporalDslService.

- Update and add tests for MapInput, SimpleContext, ModelSourcePreprocessor, DslBuilder, Process/Transaction code generators, and DslCompiler.

- Refresh docs/dsl/constructs.md to describe automatic @Json injection.