@@ -1,21 +1,33 @@
 package cbs.nova.dsl;
 
+import io.avaje.jsonb.Json;
+
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
-public final class MapInput {
+/**
+ * Immutable wrapper for a parameter map. Used as the typed input/output for parameter-based
+ * DSL processes, transactions, and functions, and as a convenient factory for map literals
+ * in DSL authoring.
+ */
+@Json
+public record MapInput(Map<String, Object> values) {
 
-  private MapInput() {
+  public MapInput {
+    values = values == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(values));
   }
 
-  public static Map<String, Object> of(Object... keyValuePairs) {
+  /**
+   * Creates a {@link MapInput} from varargs key-value pairs.
+   */
+  public static MapInput of(Object... keyValuePairs) {
     if (keyValuePairs.length % 2 != 0) {
       throw new IllegalArgumentException(
               "MapInput.of() requires an even number of arguments, got " + keyValuePairs.length);
     }
     if (keyValuePairs.length == 0) {
-      return Collections.emptyMap();
+      return new MapInput(Map.of());
     }
     var map = new LinkedHashMap<String, Object>(keyValuePairs.length / 2);
     for (int i = 0; i < keyValuePairs.length; i += 2) {
@@ -28,6 +40,20 @@ public final class MapInput {
       }
       map.put(key, keyValuePairs[i + 1]);
     }
-    return Collections.unmodifiableMap(map);
+    return new MapInput(map);
+  }
+
+  /**
+   * Creates a {@link MapInput} from an existing map.
+   */
+  public static MapInput fromMap(Map<String, Object> map) {
+    return map == null ? new MapInput(Map.of()) : new MapInput(map);
+  }
+
+  /**
+   * Returns a mutable copy of the underlying values.
+   */
+  public Map<String, Object> asMap() {
+    return new LinkedHashMap<>(values);
   }
 }
